wayland proxy connection failure after applying update, defaulting to xwayland
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox121 | --- | unaffected |
| firefox122 | --- | unaffected |
| firefox123 | --- | fixed |
People
(Reporter: gerard-majax, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
After applying update using our updater, I saw:
janv. 15 16:02:18 portable-alex Firefox-Nightly.desktop[841041]: Wayland Proxy error: ConnectToCompositor() connect() : Aucun fichier ou dossier de ce type
janv. 15 16:02:18 portable-alex Firefox-Nightly.desktop[841041]: Wayland Proxy error: StartProxyServer(): bind() error : Adresse déjà utilisée
janv. 15 16:02:18 portable-alex Firefox-Nightly.desktop[841041]: [GFX1-]: glxtest: Could not connect to wayland display, WAYLAND_DISPLAY=/run/user/1000/wayland-proxy-841041
PID 841041 is indeed the PID of the updated Firefox.
This makes the browser switch to XWayland that triggers all kind of weird bugs.
| Reporter | ||
Updated•2 years ago
|
| Reporter | ||
Comment 1•2 years ago
|
||
There's no /run/user/1000/wayland-proxy-841041 socket
| Reporter | ||
Comment 2•2 years ago
|
||
Killing / restarting after the update was applied and the browser was restarted gets back pure Wayland connection, and /run/user/1000/wayland-proxy-852295 is there.
Comment 3•2 years ago
|
||
Set release status flags based on info from the regressing bug 1743144
Updated•2 years ago
|
Comment 4•2 years ago
|
||
I guess when restarting we're somehow inheriting the WAYLAND_DISPLAY variable from our previous process...
| Assignee | ||
Comment 5•2 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #4)
I guess when restarting we're somehow inheriting the WAYLAND_DISPLAY variable from our previous process...
Yes, we don't terminate the proxy when restart after update.
| Assignee | ||
Comment 6•2 years ago
|
||
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 8•2 years ago
|
||
| bugherder | ||
Description
•