Bug 1874717 [Wayland] Clear Wayland proxy from LaunchChild() r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D198606